--- a/account/templates/account/auth.html
+++ b/account/templates/account/auth.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block pagetitle %}
-<title>Enter your Email - Nairobi Sentinel</title>
+Enter your Email
 {% endblock pagetitle %}
 
 {% block pageheader %}
