--- a/account/templates/account/subscribe.html
+++ b/account/templates/account/subscribe.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block pagetitle %}
-<title>Subscribe - Nairobi Sentinel</title>
+Subscribe
 {% endblock pagetitle%}
 
 {% block pageheader %}
