--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block pagetitle %}
-<title>Login - Nairobi Sentinel</title>
+Login
 {% endblock pagetitle %}
 
 {% block pageheader %}
