--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -5,9 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    {% block pagetitle%}
-    {% endblock pagetitle%}
+    <title>{% block pagetitle%}{% endblock pagetitle%} - Fueled by Leroy</title>
     
     <link rel="icon" type="image/png" href="{% static 'account/icons/fbl.jpg' %}">
 
