--- a/core/static/core/episode.css
+++ b/core/static/core/episode.css
@@ -2,7 +2,7 @@
     font-size: 14px;
     font-family: CrimsonPro;
     line-height: 1.7rem;
-    display: none;
+    /* display: none; */
     z-index: 2;
     position: absolute;
     bottom: 13vh;
