--- a/core/static/core/episode.css
+++ b/core/static/core/episode.css
@@ -1,23 +1,27 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 .episodepage {
     font-size: 14px;
     font-family: CrimsonPro;
     line-height: 1.7rem;
-    /* display: none; */
-    z-index: 2;
-    position: absolute;
-    bottom: 13vh;
+    background-color: #FFFFFF;
 }
-.episodepage h1, h2, h3, h4, h5, h6 {
-    color: #000;
+.episodepage p, h1, h2, h3, h4, h5, h6 {
+    color: #000000;
 }
 .episodepage .row {  
     display: flex;
     flex-wrap: wrap;
-    padding: 4vh 40vw;
+    padding: 10vh 20vw;
 }
 .episodepage .side {
     flex: 40%;
     padding-right: 3%;
+    aspect-ratio: 1/1;
+    object-fit: cover;
 }
 .episodepage .main {
     flex: 60%;
@@ -28,51 +32,10 @@
     grid-gap: 10px;
 }
 
-/* Podcast Episode Page Player */
-
-.episodepage .controls {
-    /* float: left; */
-    align-items: center;
-    display: flex;
-    margin: 0;
-    margin: 4% 0%;
-}
-.episodepage .controls .pButton {
-    cursor: pointer;
-    padding: 0;
-    margin-right: 7px;
-    width: 40px; 
-    height: 40px;
-}
-.episodepage #timeline {
-    width: 90%;
-    height: 2px;
-    margin: 4% 0%;
-    float: left;
-    -webkit-border-radius: 15px;
-    border-radius: 15px;
-    background: rgba(252, 250, 250, 0.678);
-}
-.episodepage #playhead {
-    width: 8px;
-    height: 8px;
-    -webkit-border-radius: 50%;
-    border-radius: 50%;
-    margin-top: -3px;
-    background: #FFFFFF;
-    cursor: pointer;
-}
-.episodepage .timer {
-    font-family: monospace;
-    color: #FFFFFF;
-    float: right;
-    padding: 0;
-    margin: 0;
-}
-
 @media screen and (max-width: 769px) {
     .episodepage .row {   
         flex-direction: column;
+        flex-wrap: nowrap;
         padding: 4vh 2vw;
     }
     .episodepage .side {
@@ -80,12 +43,6 @@
         padding-bottom: 10%;
     }
     .episodepage .epi-content p {
-        font-size: 14px;
-    }
-    .episodepage #timeline {
-        width: 100%;
-    }
-    .episodepage .timer {
         font-size: 14px;
     }
 }
