--- a/core/templates/core/episode.html
+++ b/core/templates/core/episode.html
@@ -25,32 +25,39 @@
 
 {% block page %}
 <div class="episodepage">
-
     <div class="row">
         <div class="side">
             <img src="{{ episode.image.url }}" alt="{{episode.title}}" style="width: 100%; height: 100%">
         </div>
-
         <div class="main">
             <p style="color: gray;">{{ episode.pubDate }}</p>
             <h3 style="padding-bottom: 4%;">{{ episode.title }}</h3>
             <div class="epi-content">
                 <h4>DESCRIPTION</h4>
                 <p>{{ episode.summary }}</p>
-
                 <audio id="episodeaudio" preload="true" >
                     <source src="{{ episode.audio.url }}">
                 </audio>
-
-                <div class="controls">
-                    <img class="pButton"  id="rev" src="{% static 'core/icons/replay_10.png' %}" alt="replay 10 seconds">
-                    <img  class="pButton" id="pButton" src="{% static 'core/icons/play.png' %}" alt="play episode">
-                    <img class="pButton" id="fwd" src="{% static 'core/icons/forward_30.png' %}" alt="forward 30 seconds">
-                </div>
-
             </div>
         </div>
     </div>
-
 </div>
 {% endblock page %}
+
+{% block player %}
+<footer>
+    <div id="footer-episode" class="footerimage">
+        <img src="{{ episode.image.url }}">
+    </div>
+    
+    <div id="timeline">
+        <div id="playhead"></div>
+        <div class="timer">00:00</div>
+        <div class="duration">00:00</div>
+    </div>
+
+    <div class="footerimage">
+        <img id="pButtonFT" src="/static/core/media/play.png" style="width: 100%; height: 100%;">
+    </div>
+</footer>
+{% endblock player %}
