--- a/core/templates/core/404.html
+++ b/core/templates/core/404.html
@@ -1,29 +1,19 @@
 {% extends "core/base.html" %}
-
 {% load static %}
 
-{% block title %}
-{% endblock title %}
-
 {% block meta %}
-<title>Page not found: Leroy Buliro</title>
+<title>Page not found: Fueled by Leroy</title>
 <meta name="description" content="Leroy Buliro: deejay, storyteller, financial advisor">
 <meta name="keyword" content="Kenya, Nairobi, booze, travel, nightlife, food, lifestyle, culture">
 {% endblock meta %}
 
-{% block style %}
-<!-- <link rel="stylesheet" href="{% static 'core/blog.css' %}"> -->
-{% endblock style %}
-
 {% block navmenu %}
-    <a href="{% url 'core:index' %}">HOME</a>
     <a href="{% url 'core:event' %}">EVENTS</a>
     <a href="{% url 'core:blogpage' %}">BLOG</a>
     <a href="{% url 'core:podcast' %}">PODCAST</a>
 {% endblock navmenu %}
 
 {% block mobmenu %}
-    <a href="{% url 'core:index' %}">HOME</a>
     <a href="{% url 'core:event' %}">EVENTS</a>
     <a href="{% url 'core:blogpage' %}">BLOG</a>
     <a href="{% url 'core:podcast' %}">PODCAST</a>
@@ -33,12 +23,10 @@
 <div style="margin: 7% 2% 7% 2%;">
     <h4>Page Not Found</h4>
     <br/>
-
     <div>
         <p>The URL you have requested was not found. We apologize for any inconvenience. From here you can return to the homepage.</p>
         <br/>
         <a href="{% url 'core:index' %}" style="color: red; font-weight: bolder;">Go Back Home</a>
     </div>
-    
 </div>
 {% endblock body %}
