--- a/core/templates/core/podbase.html
+++ b/core/templates/core/podbase.html
@@ -19,6 +19,7 @@
         {% block style %}
         {% endblock style %}
         <!-- Load js -->
+        <script src="https://code.jquery.com/jquery-2.2.4.min.js" async></script>
         <script>
             document.addEventListener ('DOMContentLoaded', function(){
 
