--- a/core/templates/core/podcast.html
+++ b/core/templates/core/podcast.html
@@ -59,7 +59,7 @@
                     <img src="{{ episode.image.url }}" alt="{{ podcast.title|slugify }}-{{ episode.title|slugify }}" style="width: 100%; height: auto;">
                     <p class="epi-id">#{{ episode.id }}</p>
                     <p class="epi-deet">{{ episode.title }}</p>
-                    <div class="epi-play" onload="pgSetup()">
+                    <div class="epi-play">
                     </div>
                     <audio id="audio" preload="true" >
                         <source src="{{ episode.audio.url }}">
