--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -4,8 +4,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="icon" type="image/png" href="{% static 'core/media/favicon.ico' %}">
         <title>{% block pagetitle%}{% endblock pagetitle%} - Fueled by Leroy</title>
-        <link rel="icon" type="image/png" href="{% static 'account/media/favicon.ico' %}">    
     </head>
     <style>
         * {
