--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -104,6 +104,7 @@
             font-size: medium;
             font-weight: bold;
             text-decoration: none;
+            cursor: pointer;
         }
         .btnalt, .btnalt:hover {
             background-color: white;
