--- a/account/templates/registration/subscribe.html
+++ b/account/templates/registration/subscribe.html
@@ -14,38 +14,38 @@ Subscribe
 <form method="post">{% csrf_token %}
 
     <div onclick="history.back()">
-        <span class="formlabel">{{ form.email.label }}</span>
+        <span class="formlabel">{{ subscribeForm.email.label }}</span>
 
-        {% for error  in form.email.errors %}
+        {% for error  in subscribeForm.email.errors %}
         <span style="color: red; font-size: small;">*{{error}}</span>
         {% endfor %}
 
         {% if sess_email %}
         <input type="email" name="email" class="forminput2"  value="{{ sess_email }}" readonly>
         {% else %}
-        <p class="forminput"">{{ form.email }}</p>
+        <p class="forminput"">{{ subscribeForm.email }}</p>
         {% endif %}
     </div>
     
     <div>
-        <span class="formlabel">{{ form.username.label }}</span>
-        {% for error  in form.username.errors %}
+        <span class="formlabel">{{ subscribeForm.username.label }}</span>
+        {% for error  in subscribeForm.username.errors %}
         <p class="formerror">*{{error}}</p>
         {% endfor %}
         <input type="text" name="username" class="forminput">
     </div>
 
     <div>
-        <span class="formlabel">{{ form.password.label }}</span>
-        {% for error  in form.password.errors %}
+        <span class="formlabel">{{ subscribeForm.password.label }}</span>
+        {% for error  in subscribeForm.password.errors %}
         <p class="formerror">*{{error}}</p>
         {% endfor %}
         <input type="password" name="password" class="forminput">
     </div>
 
-    {% if form.non_field_errors %}
+    {% if subscribeForm.non_field_errors %}
     <div>
-        {% for error in form.non_field_errors %}
+        {% for error in subscribeForm.non_field_errors %}
         <p class="formerror">**{{ error }}</p>
         {% endfor %}
     </div>
