--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -124,6 +124,9 @@
                 grid-gap: 14px;
                 margin-top: 3vh;
             }
+            .formlabel {
+                font-size: 12px;
+            }
         }
 
         /* Footer Section */
